--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="CSS/images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Robert,</h1>
     <p>a programmer.</p>
     <img class="bottom-cloud" src="CSS/images/cloud.png" alt="cloud-img">
