--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Robert's Super Web Page</title>
-  <link rel="stylesheet" type="text/css" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
